<resources>
    <string name="app_name">Boa Viagem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello Word</string>
    <string name="titulo">Informe seu nome</string>
    <string name="surpreenda_me">Surpreenda-me</string>
    <string name="saudacao">Olá</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Usuario ou senha invalido</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configuraçoes</string>
    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negocios</string>
    <string name="data_da_chegada">Data da Chegada</string>
    <string name="data_da_saida">Data da Saida</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descriçao</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei</string>
    <string name="categoria">Categoria</string>
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover Viagem</string>
    <string name="remover">Remover </string>
    <string name="arquivo">Arquivo </string>
    <string name="editar">Editar </string>
    <string name="gastos_realizados">Gastos Realizados </string>
    <string name="opcoes">Opçoes </string>
    <string name="confirmacao_exclusao_viagem">Excluir a viagem ? </string>
    <string name="sim">Sim</string>
    <string name="nao">Nao </string>
    <string name="preferencias">Preferençias </string>
    <string name="modo_viagem_sumario">Sumario </string>
    <string name="modo_viagem">Viagem </string>
    <string name="informe_valor_limite">Informe valor limite </string>
    <string name="valor_limite_sumario">Valor limite sumario </string>
    <string name="valor_limite">Valor limite </string>
    <string name="manter_conectado">Manter-me conectado </string>
    <string name="registro_salvo">Salvo</string>
    <string name="erro_salvar">Erro ao salvar</string>

    <string-array name="categoria_gasto">
        <item>Alimentaçao</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
</resources>
